force-app/main/default/objects/Opportunity/fields/AE_Historical_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>AE_Historical_Win_Rate__c</fullName>
    <formula>Account.Account_Exec__r.Historical_Win_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Historical Win Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>