force-app/main/default/objects/Opportunity/fields/AE_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>AE_Tenure_Months__c</fullName>
    <formula>Account.Account_Exec__r.Tenure_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Tenure (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>