force-app/main/default/objects/Opportunity/fields/Client_Avg_NPS__c.field-meta.xml
<CustomField>
    <fullName>Client_Avg_NPS__c</fullName>
    <formula>Account.Avg_NPS_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Avg NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>