force-app/main/default/objects/Opportunity/fields/Client_Exec_Sponsor_Involved__c.field-meta.xml
<CustomField>
    <fullName>Client_Exec_Sponsor_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Exec Sponsor Involved?</label>
    <type>Checkbox</type>
</CustomField>