force-app/main/default/objects/Opportunity/fields/Client_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Score__c</fullName>
    <formula>Account.Account_Health_Score__c</formula>
    <label>Client Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>