force-app/main/default/objects/Opportunity/fields/Client_Industry__c.field-meta.xml
<CustomField>
    <fullName>Client_Industry__c</fullName>
    <label>Client Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Tech</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>