force-app/main/default/objects/Opportunity/fields/Client_License_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Client_License_Utilization__c</fullName>
    <formula>Account.License_Utilization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client License Utilization %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>