force-app/main/default/objects/Opportunity/fields/Client_Post_Sales_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Post_Sales_Score__c</fullName>
    <formula>Account.PostSales_Assessment_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Post Sales Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>