force-app/main/default/objects/Opportunity/fields/Client_Red_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Red_Account__c</fullName>
    <formula>Account.Red_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Red Account?</label>
    <type>Checkbox</type>
</CustomField>