force-app/main/default/objects/Opportunity/fields/Client_Region__c.field-meta.xml
<CustomField>
    <fullName>Client_Region__c</fullName>
    <label>Client Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>