force-app/main/default/objects/Opportunity/fields/Client_Support_Priority__c.field-meta.xml
<CustomField>
    <fullName>Client_Support_Priority__c</fullName>
    <label>Client Support Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority 1</fullName>
            </value>
            <value>
                <fullName>Priority 2</fullName>
            </value>
            <value>
                <fullName>Priority 3</fullName>
            </value>
            <value>
                <fullName>Priority 4</fullName>
            </value>
            <value>
                <fullName>Priority 5</fullName>
            </value>
            <value>
                <fullName>Deluxe</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premier+</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>