force-app/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <label>Compelling Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reorganization</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Cost Saving</fullName>
            </value>
            <value>
                <fullName>Improve Customer Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>