force-app/main/default/objects/Opportunity/fields/Current_System__c.field-meta.xml
<CustomField>
    <fullName>Current_System__c</fullName>
    <label>Current System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Pega</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>