force-app/main/default/objects/Opportunity/fields/Decision_Maker_Title__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Title__c</fullName>
    <label>Decision Maker Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CTO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>