force-app/main/default/objects/Opportunity/fields/Executives__c.field-meta.xml
<CustomField>
    <fullName>Executives__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meet Our Execs</label>
    <type>Checkbox</type>
</CustomField>