force-app/main/default/objects/Opportunity/fields/Functional_Fit__c.field-meta.xml
<CustomField>
    <fullName>Functional_Fit__c</fullName>
    <label>Functional Fit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>