force-app/main/default/objects/Opportunity/fields/Main_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Main_Competitor__c</fullName>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>