force-app/main/default/objects/Opportunity/fields/Number_Innovation_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_Innovation_Sessions__c</fullName>
    <label>Number of Innovation Sessions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>