force-app/main/default/objects/Opportunity/fields/Number_of_Tech_Experts_Involved__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tech_Experts_Involved__c</fullName>
    <label>Number of Tech Experts Involved</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>