force-app/main/default/objects/Opportunity/fields/Opportunity_Discount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Discount__c</fullName>
    <label>Opportunity Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>