force-app/main/default/objects/Opportunity/fields/Partner_Involved__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Involved?</label>
    <type>Checkbox</type>
</CustomField>