force-app/main/default/objects/Opportunity/fields/Pre_Sales_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Assessment_Score__c</fullName>
    <label>Pre-Sales Assessment Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>