force-app/main/default/objects/Opportunity/fields/Strategic_Client__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Client__c</fullName>
    <formula>Account.Strategic__c</formula>
    <label>Strategic Client?</label>
    <type>Checkbox</type>
</CustomField>