force-app/main/default/objects/Opportunity/fields/Technical_Fit__c.field-meta.xml
<CustomField>
    <fullName>Technical_Fit__c</fullName>
    <label>Technical Fit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>