force-app/main/default/objects/Opportunity/listViews/Closed_Opportunities.listView-meta.xml
<ListView>
    <fullName>Closed_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>AE_Historical_Win_Rate__c</columns>
    <columns>Client_AOV_Band__c</columns>
    <columns>Client_Industry__c</columns>
    <columns>Client_Region__c</columns>
    <columns>Functional_Fit__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>Closed Opportunities</label>
</ListView>